--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "2",
     "jquery": "1.9.1 - 3",
